--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="calculator">
         <div class="display">
             <input name="num" id="num" value="" placeholder="0" disabled>
-            <h2>10*99</h2>
+            <h2 id="history">10*99</h2>
         </div>
 
         <div class="row">
