--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/img/favicon.ico"/>
+    <link rel="icon" href="/img/favicon.ico" />
     <title>Calculadora</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="calculator">
         <div class="display">
             <input name="num" id="num" value="" placeholder="0" disabled>
-            <h2 id="history">10*99</h2>
+            <h2 id="history"></h2>
         </div>
 
         <div class="row">
