Add readme.md, fix css

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </div>
     </div>
 
+    <div class="github">
+        <a href="https://github.com/iaematt/calculator" target="_blank" title="Code GitHub">
+            <img src="/img/github.svg" width="35" />
+        </a>
+    </div>
+
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
