--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <!-- SCRIPTS -->
-    <script type="text/javascript" src="/js/script.js"></script>
+    <script type="text/javascript" src="/js/script.min.js"></script>
     <script type="text/javascript" src="/js/keyboard.js"></script>
 
 </body>
