--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="/js/script.min.js"></script>
-    <script type="text/javascript" src="/js/keyboard.js"></script>
+    <script type="text/javascript" src="/js/keyboard.min.js"></script>
 
 </body>
 
